# opencv_train

./: .gitignore  CMakeLists.txt  LICENSE  README.md
face_detection_yunet/: CMakeLists.txt  main.cpp
face_search/: CMakeLists.txt  Converter_Qt_Opencv.cpp  Converter_Qt_Opencv.h  graphicsview.cpp  graphicsview.h  img.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  tab_widget_cam.cpp  tab_widget_cam.h  tab_widget_cam.ui  tab_widget_pic.cpp  tab_widget_pic.h  tab_widget_pic.ui
face_search/search_type/: pphs.cpp  pphs.h  search_type_cascadeclassifier.cpp  search_type_cascadeclassifier.h  yolox.cpp  yolox.h  yunet.cpp  yunet.h
photo/: CMakeLists.txt  main.cpp
photo/Img/1/: 1.pgm  11.pgm  3.pgm  4.pgm  8.pgm
recognition/: CMakeLists.txt  main.cpp
train/: CMakeLists.txt  main.cpp
